Added Links of previous and next pages for filter | Updated Filter response | Created bone for Category